--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-three/drei": "^9.17.3",
-    "@react-three/fiber": "^8.2.1",
+    "@react-three/fiber": "^8.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "three": "^0.142.0",
