--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "nasa-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,13 +13,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
-    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "three": "^0.142.0",
     "web-vitals": "^2.1.4"
@@ -28,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write --config ./.prettierrc './src/**/*.js'"
   },
   "eslintConfig": {
     "extends": [
